# keychecker

./: .flake8  .gitignore  LICENSE  README.md  Readme.md  pyproject.toml  requirements-uv.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  osv-scanner.yml  publish.yml  scorecard.yml
al/: __main__.py
examples/: demo.py  sample_repo.txt  sample_usernames.txt
keychecker/: __init__.py  __main__.py  cli.py
keychecker/core/: key_analyzer.py  server_validator.py
keychecker/core/ssh/: validate_ssh.py
keychecker/plugins/: codeberg.py  gitea.py  github.py  huggingface.py
keychecker/plugins/github/: github_enum.py
keychecker/plugins/gitlab/: gitlab_enum.py
keychecker/utils/: output.py
keycheker/: __main__.py
keycheker/core/: identify_key.py  validate_ssh.py
keycheker/core/ssh/: validate_ssh.py
keycheker/plugins/: github_enum.py
keycheker/plugins/github/: github_enum.py
keycheker/utils/: read_file.py
scripts/: README.md  build.sh  clean-uv.sh  clean.sh  install-uv.sh  install.sh  publish-pypi.sh  publish-testpypi.sh  setup-dev-uv.sh  setup-dev.sh  test.sh  version.sh
tests/: __init__.py  test_key_analyzer.py
